REMOVE: Codeable is gone CONTRACT: use ordinal() instead of getCode() from now on